Robocup docker image not building (#895)
* Use old visual mesh commit with OpenCL caching (#894)

* Testing alt docker repo

* fixed login typos and added clean up target branch

* dockerhub repo change

* update docker repo name

* Removed local mirror

* Don't check signatures

* add branch to GA

* trust no one 🥶

* You saw nothing

* I should proofread before comitting

* path switcheroos

* fix pacman conf location

* changed target back to main

* Changed target to robocup2022 dev branch

* changed dockerhub creds and cache registry

* Updated target script to target robocup dockerhub repo

* finding strange characters

* changed target branch

* remove offending

* return offending

* reverted changes - testing for special chars

* hopefully no mystery chars

* swaps locals to robocup equiv

* remove additional tag

* Update nubots.yaml

* removed username secret

* removes this branch as a trigger

Co-authored-by: Ysobel Sims <35280100+ysims@users.noreply.github.com>
Co-authored-by: Liam Craft <62984007+Crafty15@users.noreply.github.com>
Co-authored-by: Trent Houliston <trent@houliston.me>

--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -5,7 +5,7 @@ name: Normal Target Pushes
 on:
   # Triggers the workflow on push events for the main branch
   push:
-    branches: [main]
+    branches: [robocup2022]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -19,7 +19,7 @@ jobs:
     # Run once for each of the platforms
     strategy:
       matrix:
-        platform: ["generic", "nuc8i7beh", "nuc7i7bnh"]
+        platform: ["generic", "nuc7i7bnh"]
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -34,15 +34,15 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          username: crafty15
+          password: ${{ secrets.LIAMS_DOCKER_PASSWORD }}
 
       # Build the docker image
       - name: 🐳 Build the docker image 🐳
         uses: docker/build-push-action@v3.0.0
         with:
           pull: true
-          tags: "nubots/nubots:${{ matrix.platform }}"
+          tags: "crafty15/nubots:${{ matrix.platform }}"
           file: docker/Dockerfile
           context: docker
           build-args: |
@@ -50,5 +50,6 @@ jobs:
             BUILDKIT_INLINE_CACHE=1
           push: true
           cache-from: |
-            type=registry,ref=nubots/nubots:${{ matrix.platform }}
+            type=registry,ref=crafty15/nubots:${{ matrix.platform }}
+            type=registry,ref=crafty15/nubots:generic
             type=inline
