--- a/.github/workflows/nubots.yaml
+++ b/.github/workflows/nubots.yaml
@@ -5,7 +5,7 @@ name: NUbots CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [main]
+    branches: [robocup2022]
   # Triggers on PRs to any branch
   pull_request:
 
@@ -89,15 +89,15 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          username: crafty15
+          password: ${{ secrets.LIAMS_DOCKER_PASSWORD }}
 
       # Build the docker image
       - name: 🐳 Build the docker image 🐳
         uses: docker/build-push-action@v3.0.0
         with:
           pull: true
-          tags: "nubots/nubots:pull-request-${{ github.event.number }}"
+          tags: "crafty15/nubots:pull-request-${{ github.event.number }}"
           file: docker/Dockerfile
           context: docker
           build-args: |
@@ -105,13 +105,13 @@ jobs:
             BUILDKIT_INLINE_CACHE=1
           push: true
           cache-from: |
-            type=registry,ref=nubots/nubots:pull-request-${{ github.event.number }}
-            type=registry,ref=nubots/nubots:generic
+            type=registry,ref=crafty15/nubots:pull-request-${{ github.event.number }}
+            type=registry,ref=crafty15/nubots:generic
             type=inline
 
       - id: image_output
         name: Output the created image
-        run: echo "::set-output name=image::nubots/nubots:pull-request-${{ github.event.number }}"
+        run: echo "::set-output name=image::crafty15/nubots:pull-request-${{ github.event.number }}"
 
   # Build the codebase
   build_nubots:
