Add gyro estimate

--- a/module/network/NetworkForwarder/data/config/NetworkForwarder.yaml
+++ b/module/network/NetworkForwarder/data/config/NetworkForwarder.yaml
@@ -21,9 +21,9 @@ targets:
     message.input.Image: false # You probably don't want this unless you're testing something very weird
     message.output.CompressedImage: 10
 
-    message.vision.Balls: false
-    message.vision.Goals: false
-    message.vision.GreenHorizon: false
+    message.vision.Balls: true
+    message.vision.Goals: true
+    message.vision.GreenHorizon: true
     message.vision.Lines: false
     message.vision.Obstacles: false
     message.vision.VisualMesh: false
