--- a/docker/etc/pacman.conf
+++ b/docker/etc/pacman.conf
@@ -5,7 +5,7 @@ TotalDownload
 Color
 ILoveCandy
 
-# Trust anything so we don't get signature errors for old packages while date locked
+# Trust everything so we don't get signature errors for old packages while date locked
 SigLevel = Never TrustAll
 
 [core]
