--- a/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
+++ b/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
@@ -22,11 +22,9 @@ eta:
   C: 20
   M: 20
 
-task: "walk"
-task_config_path: "config/webots/QuinticWalk.yaml" #QuinticWalkBackwards.yaml
-#task_config_path: "config/webots/QuinticWalkBackwards.yaml"
-#task_config_path: "config/webots/QuinticWalkStrafe.yaml"
-#task_pattern: "0"
+task: "strafe"
+task_config_path: "config/webots/QuinticWalk.yaml"
+
 initial_translation: [-4.0, -3.0, 0.51] # x, y, z
 intial_rotation: [0, 0, 1, 0] # x, y, z, angle (rads)
 # The following values are setting the initial values and limits for the walk engine parameters.
@@ -35,7 +33,7 @@ intial_rotation: [0, 0, 1, 0] # x, y, z, angle (rads)
 walk:
   # Full walk cycle frequency (how long it takes in seconds for a left + right steps)
   # (in Hz, > 0)
-  freq: [1, 0.5, 2.0]
+  freq: [1, 0.1, 3.0]
   # Length of double support phase in half cycle (how long both legs should be on the ground, as a ratio of how long it takes for a single step)
   # (ratio, [0:1])
   double_support_ratio: [0.1, 0.05, 0.2]
@@ -52,13 +50,13 @@ walk:
     height: [0.45, 0.35, 0.5]
     # Trunk pitch orientation (how much we lean the torso forward or backward, does not change)
     # (in rad)
-    pitch: [-15 * pi / 180, -20 * pi / 180, 0 * pi / 180] #[24 * pi / 180, -15 * pi / 180, 30 * pi / 180]  OPTIMAL!!!!!!! [24 * pi / 180, -10 * pi / 180, 30 * pi / 180]
+    pitch: [10 * pi / 180, -10 * pi / 180, 30 * pi / 180] #[24 * pi / 180, -15 * pi / 180, 30 * pi / 180]  OPTIMAL!!!!!!! [24 * pi / 180, -10 * pi / 180, 30 * pi / 180]
     # Trunk forward offset (how much we offset the trunk forward or backward lean when walking)
     # (in m)
     x_offset: [0.03, -0.05, 0.05]
     # Trunk lateral offset (how much we offset the trunk left or right lean when walking)
     # (in m)
-    y_offset: [-0.01, -0.02, 0.02]
+    y_offset: [0.03, -0.05, 0.05] #[-0.01, -0.02, 0.02]
     # Trunk lateral oscillation amplitude ratio (how much we swing the trunk left and right when stepping)
     # (ratio, >= 0)
     swing: [0.03, 0.01, 0.05]
@@ -72,6 +70,6 @@ walk:
 
 # The following values are setting the initial values and limits for the walk engine command.
 walk_command:
-  velocity: [0.2, 0.01, 0.51]
+  velocity: [0.1, 0.05, 0.25] # [0.2, 0.01, 0.51]
   #velocity_Y: [0.0, 0.0, 0.0] #[-0.2, -0.51, 0.01]
   #rotation: [0.0, 0.0, 0.0] #[0.15, 0.1, 1.57]
