--- a/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
+++ b/module/support/optimisation/NSGA2Optimiser/data/config/NSGA2Optimiser.yaml
@@ -22,7 +22,7 @@ eta:
   C: 20
   M: 20
 
-task: "strafe"
+task: "rotation"
 task_config_path: "config/webots/QuinticWalk.yaml"
 
 initial_translation: [-4.0, -3.0, 0.51] # x, y, z
@@ -66,10 +66,10 @@ walk:
   pause:
     # Time that the walking is paused when becoming unstable
     # (in s, [0:10])
-    duration: [0.5, 0.0, 2.0]
+    duration: [0.05, 0.0, 0.5]
 
 # The following values are setting the initial values and limits for the walk engine command.
 walk_command:
-  velocity: [0.1, 0.05, 0.25] # [0.2, 0.01, 0.51]
+  velocity: [1.57, 0.5, 3.14] # [0.2, 0.01, 0.51]
   #velocity_Y: [0.0, 0.0, 0.0] #[-0.2, -0.51, 0.01]
   #rotation: [0.0, 0.0, 0.0] #[0.15, 0.1, 1.57]
