--- a/module/input/Camera/data/config/Cameras/Left.yaml
+++ b/module/input/Camera/data/config/Cameras/Left.yaml
@@ -7,5 +7,10 @@ settings:
   OffsetX: 0
   OffsetY: 0
   ExposureAuto: Continuous
-  GainAuto: Continuous
+  GainAuto: Continuous # Set to 'Off' when manually adjusting gain. Default = Continuous
+  Gain: 15 # Range: 0.00 - 18.01'
+  GammaEnable: true # Set to false to adjust gamma. Default = false
+  Gamma: 0.50
   BalanceWhiteAuto: Continuous
+  AcquisitionFrameRateEnable: true
+  AcquisitionFrameRate: 20.00
