--- a/module/network/PlotJuggler/data/config/PlotJuggler.yaml
+++ b/module/network/PlotJuggler/data/config/PlotJuggler.yaml
@@ -4,7 +4,7 @@ log_level: INFO
 forward_datapoints: true
 
 # Set to true to generate and emit sample datapoints (for testing the connection to PlotJuggler)
-send_debug_waves: true
+send_debug_waves: false
 
 # Config for the PlotJuggler UDP server
 udp_server:
