--- a/module/input/Camera/data/config/Cameras/Right.yaml
+++ b/module/input/Camera/data/config/Cameras/Right.yaml
@@ -9,17 +9,13 @@ settings:
   ExposureAuto: Continuous
   GainAuto: Continuous # Set to 'Off' when manually adjusting gain
   Gain: 15 # Range: 0.00 - 18.01
-  GammaEnable: true # Set to false to adjust gamma. Default = false
+  GammaEnable: true # Set to false to adjust gamma. Default = true
   Gamma: 0.50
   BalanceWhiteAuto: Once # Options: Off, Once, Continuous
   BalanceRatioSelector: Red # Options: Red or Blue. Controls the balance ratio of the selected color relative to green. Used for white balancing.
   BalanceRatio: 2.56
-
-  # The EV compensation value used in the exposure compensation. This allows you to adjust the resultant image
-  # intensity with one control. A positive value makes the image brighter. A negative value makes the image darker.
-  # Range from -3 to 3 with a step of 1/3. Default = 0.
-  AutoExposureEVCompensation: 0
+  AutoExposureEVCompensation: 0 # Range from -3(darker) to 3(lighter) with a step of 1/3. Default = 0.
   AcquisitionFrameRateEnable: true
-  AcquisitionFrameRate: 50.00
+  AcquisitionFrameRate: 20.00
   SaturationEnable: false
   Saturation: 0
