--- a/module/motion/ScriptEngine/data/scripts/nugus/Zombie.yaml
+++ b/module/motion/ScriptEngine/data/scripts/nugus/Zombie.yaml
@@ -2,61 +2,81 @@
     - id: R_SHOULDER_PITCH
       position: 0
       gain: 30
+      torque: 0
     - gain: 30
       position: 0
       id: L_SHOULDER_PITCH
+      torque: 0
     - id: R_SHOULDER_ROLL
       gain: 30
       position: 0
+      torque: 0
     - position: 0
       id: L_SHOULDER_ROLL
       gain: 30
+      torque: 0
     - position: 0
       gain: 30
       id: R_ELBOW
+      torque: 0
     - position: 0
       id: L_ELBOW
       gain: 30
+      torque: 0
     - id: R_HIP_YAW
       gain: 30
       position: 0
+      torque: 0
     - gain: 30
       position: 0
       id: L_HIP_YAW
+      torque: 0
     - position: 0
       gain: 30
       id: R_HIP_ROLL
+      torque: 0
     - position: 0
       id: L_HIP_ROLL
       gain: 30
+      torque: 0
     - gain: 30
       id: R_HIP_PITCH
       position: 0
+      torque: 0
     - id: L_HIP_PITCH
       gain: 30
       position: 0
+      torque: 0
     - id: R_KNEE
       gain: 30
       position: 0
+      torque: 0
     - id: L_KNEE
       gain: 30
       position: 0
+      torque: 0
     - gain: 30
       position: 0
       id: R_ANKLE_PITCH
+      torque: 0
     - id: L_ANKLE_PITCH
       position: 0
       gain: 30
+      torque: 0
     - gain: 30
       position: 0
       id: R_ANKLE_ROLL
+      torque: 0
     - id: L_ANKLE_ROLL
       gain: 30
       position: 0
+      torque: 0
     - id: HEAD_PITCH
       gain: 30
       position: 0
+      torque: 0
     - id: HEAD_YAW
       position: 0
       gain: 30
+      torque: 0
   duration: 1000
