--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -207,9 +207,14 @@ RUN install-autotools-from-source https://github.com/gperftools/gperftools/relea
 
 # Protobuf
 RUN install-package protobuf && \
-    install-autotools-from-source https://github.com/protocolbuffers/protobuf/releases/download/v21.4/protobuf-cpp-3.21.4.tar.gz \
-    --with-zlib=/usr/local \
-    --with-protoc=/usr/sbin/protoc
+    install-from-source-with-patches https://github.com/protocolbuffers/protobuf/releases/download/v21.4/protobuf-cpp-3.21.4.tar.gz \
+    https://github.com/protocolbuffers/protobuf/commit/735221ff3a1b8e5ca1a7b38a1884043e25864f31.patch \
+    -- \
+    -DWITH_PROTOC="/usr/sbin/protoc" \
+    -Dprotobuf_BUILD_TESTS=OFF \
+    -Dprotobuf_BUILD_LIBPROTOC=ON \
+    -DBUILD_SHARED_LIBS=OFF \
+    -DZLIB_ROOT=${prefix}
 
 # Libjpeg
 RUN install-package yasm
