Adds extra camera configs (#924)
* Added some extra settings to the camera configs

* set gain to off

* Added some balance related settings

* Changed some defaults

* Capped frame rate at 20fps and cleaned up comments

--- a/module/input/Camera/data/config/Cameras/Left.yaml
+++ b/module/input/Camera/data/config/Cameras/Left.yaml
@@ -6,6 +6,8 @@ settings:
   Height: 1024
   OffsetX: 0
   OffsetY: 0
-  ExposureAuto: Continuous
-  GainAuto: Continuous
-  BalanceWhiteAuto: Continuous
+  ExposureAuto: Continuous # Options: Off, Once, Continuous
+  GainAuto: Continuous # Options: Off, Once, Continuous
+  BalanceWhiteAuto: Once # Options: Off, Once, Continuous
+  AcquisitionFrameRateEnable: true
+  AcquisitionFrameRate: 20.00 # Adjusting frame rate can help remove flickering from lighting
