add back in right camera and reduce concurrency

--- a/module/vision/VisualMesh/data/config/nugus/VisualMesh.yaml
+++ b/module/vision/VisualMesh/data/config/nugus/VisualMesh.yaml
@@ -9,7 +9,17 @@
 
 cameras:
   Left:
-    concurrent: 2
+    concurrent: 1
+    network: config/networks/RobocupNetwork.yaml
+    engine: opencl
+    cache_directory: "./vision_cache/"
+    classifier:
+      height: [0.5, 1.0]
+      max_distance: 15
+      intersection_tolerance: 0.25
+
+  Right:
+    concurrent: 1
     network: config/networks/RobocupNetwork.yaml
     engine: opencl
     cache_directory: "./vision_cache/"
