Add PlotJuggler module to forward DataPoint messages for plotting (#878)
Co-authored-by: Ysobel <ysobelsims@gmail.com>
Co-authored-by: Ysobel Sims <35280100+ysims@users.noreply.github.com>
Co-authored-by: Trent Houliston <trent@houliston.me>
Co-authored-by: Bryce <bryce.tuppurainen.au@gmail.com>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -281,6 +281,9 @@ RUN install-from-source https://github.com/ysims/VisualMesh/archive/1c8d08b8d93a
     -DBUILD_EXAMPLES=OFF \
     -DBUILD_OPENCL_ENGINE=ON
 
+# JSON for modern C++ (https://github.com/nlohmann/json)
+RUN install-header-from-source https://github.com/nlohmann/json/releases/download/v3.10.5/json.hpp
+
 #######################################
 ### ADD NEW PROGRAMS/LIBRARIES HERE ###
 #######################################
