Add speech rec roles & wav read module
This is the first commit that adds intput/WavReader and roles/speechrecognition.role

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,6 @@
     },
     "editor.codeActionsOnSave": {
         "source.organizeImports": true
-    }
+    },
+    "cmake.configureOnOpen": true
 }
