--- a/nusight2/.eslintrc.json
+++ b/nusight2/.eslintrc.json
@@ -35,6 +35,7 @@
     "prettier/prettier": "error",
     "react/display-name": 0,
     "no-unused-vars": "off",
+    "react/no-unknown-property": "off",
     "@typescript-eslint/no-unused-vars": ["error", {
       "vars": "all",
       "args": "after-used",
