--- a/nusight2/package.json
+++ b/nusight2/package.json
@@ -117,6 +117,7 @@
     "webpack-node-externals": "3.0.0"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.6.2",
     "@use-it/interval": "1.0.0",
     "binary": "0.3.0",
     "binary-search-bounds": "2.0.5",
