Update NUClearNet.js to 1.6.0

--- a/nusight2/package.json
+++ b/nusight2/package.json
@@ -91,6 +91,7 @@
     "jest": "29.0.1",
     "jest-css-modules": "2.1.0",
     "mini-css-extract-plugin": "2.6.1",
+    "nan": "2.14.0",
     "nodemon": "2.0.19",
     "patch-package": "6.4.7",
     "postcss": "8.4.16",
@@ -131,7 +132,7 @@
     "mobx": "5.15.4",
     "mobx-react": "6.2.2",
     "mobx-utils": "5.6.1",
-    "nuclearnet.js": "1.5.5",
+    "nuclearnet.js": "1.6.0",
     "protobufjs": "6.11.2",
     "react": "18.2.0",
     "react-color": "2.19.3",
