--- a/nusight2/package.json
+++ b/nusight2/package.json
@@ -105,6 +105,7 @@
     "react-svg-loader": "3.0.3",
     "rimraf": "3.0.2",
     "style-loader": "3.3.1",
+    "tailwindcss": "3.1.8",
     "ts-jest": "28.0.8",
     "ts-loader": "9.3.1",
     "ts-node": "10.9.1",
