Switch build to Vite + Rollup

--- a/nusight2/package.json
+++ b/nusight2/package.json
@@ -20,20 +20,22 @@
     "tscheck:watch": "yarn tsc --project tsconfig.test.json --watch",
     "protobuf": "node build_scripts/generate_messages.js",
     "postinstall": "patch-package && yarn protobuf",
+    "rollup": "rollup --config server.rollup.config.js --watch --run",
+    "rollup:build": "rollup --config server.rollup.config.js",
     "dev": "yarn start:virtual",
-    "dev:debug": "ts-node --inspect src/server/dev-server.ts --virtual-robots",
+    "dev:debug": "yarn rollup -- --virtual-robots --inspect",
     "storybook": "node conf/storybook/dev.js",
     "storybook:build": "node conf/storybook/build_storybook.js",
     "storybook:prod": "node conf/storybook/prod.js",
-    "start": "ts-node src/server/dev-server.ts",
-    "start:debug": "ts-node --inspect src/server/dev-server.ts",
-    "start:virtual": "ts-node src/server/dev-server.ts --virtual-robots",
+    "start": "yarn rollup",
+    "start:debug": "yarn rollup -- --inspect",
+    "start:virtual": "yarn rollup -- --virtual-robots",
     "virtual-robots": "nodemon src/virtual_robots/run.ts",
     "prod": "node dist/prod.js",
     "prod:virtual": "node dist/prod.js --virtual-robots",
-    "build": "ts-node build_scripts/build.ts --production",
-    "build:dev": "ts-node build_scripts/build.ts",
-    "build:ci": "ts-node build_scripts/build.ts --ci",
+    "build": "yarn rollup:build --environment BUILD:production && vite build",
+    "build:dev": "yarn rollup:build --environment BUILD:development && vite build",
+    "build:ci": "yarn rollup:build --environment BUILD:production,CI && vite build",
     "clean": "yarn clean:dist && yarn clean:coverage",
     "clean:dist": "rimraf dist",
     "clean:coverage": "rimraf coverage",
@@ -44,6 +46,10 @@
     "@types/react-dom": "18.0.6"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "14.0.1",
+    "@rollup/plugin-run": "2.1.0",
+    "@rollup/plugin-typescript": "8.5.0",
+    "@rollup/plugin-url": "7.0.0",
     "@storybook/addon-actions": "6.5.10",
     "@storybook/addon-knobs": "6.4.0",
     "@storybook/builder-webpack5": "^6.5.10",
@@ -77,6 +83,7 @@
     "@types/xxhashjs": "0.2.2",
     "@typescript-eslint/eslint-plugin": "5.36.1",
     "@typescript-eslint/parser": "5.36.1",
+    "@vitejs/plugin-react": "2.1.0",
     "copy-webpack-plugin": "11.0.0",
     "css-loader": "6.7.1",
     "eslint": "8.23.0",
@@ -104,6 +111,7 @@
     "raw-loader": "4.0.2",
     "react-svg-loader": "3.0.3",
     "rimraf": "3.0.2",
+    "rollup": "2.79.0",
     "style-loader": "3.3.1",
     "ts-jest": "28.0.8",
     "ts-loader": "9.3.1",
@@ -111,6 +119,8 @@
     "typescript": "4.3.5",
     "uglify-js": "3.17.0",
     "url-loader": "4.1.1",
+    "vite": "3.1.0",
+    "vite-plugin-svgr": "2.2.1",
     "webpack": "5.74.0",
     "webpack-cli": "4.10.0",
     "webpack-dev-middleware": "5.3.3",
