--- a/nusight2/tsconfig.json
+++ b/nusight2/tsconfig.json
@@ -22,7 +22,8 @@
     "typeRoots": [
       "./node_modules/@types",
       "./typings"
-    ]
+    ],
+    "rootDir": "./"
   },
   "include": [
     "./src/**/*"
