--- a/.github/workflows/nusight.yaml
+++ b/.github/workflows/nusight.yaml
@@ -141,7 +141,7 @@ jobs:
 
       - name: Build NUsight
         working-directory: nusight2
-        run: yarn build:ci
+        run: yarn tscheck && yarn build:ci
 
   # Build the NUsight Storybook code
   build-nusight-storybook:
