Fix variable name

--- a/nuclear/roles/CMakeLists.txt
+++ b/nuclear/roles/CMakeLists.txt
@@ -3,7 +3,7 @@ set(role_source_dir "${PROJECT_SOURCE_DIR}/${NUCLEAR_ROLES_DIR}")
 set(role_binary_dir "${PROJECT_BINARY_DIR}/${NUCLEAR_ROLES_DIR}")
 
 # This gets all of our role files
-file(GLOB_RECURSE rolefiles "${role_source_dir}/*.role")
+file(GLOB_RECURSE role_files "${role_source_dir}/*.role")
 
 # Backup the state of all the role variables before we re read them. This is needed so we can delete roles that no
 # longer exist
