--- a/module/motion/QuinticWalk/data/config/QuinticWalk.yaml
+++ b/module/motion/QuinticWalk/data/config/QuinticWalk.yaml
@@ -3,10 +3,10 @@ log_level: WARN
 walk:
   # Full walk cycle frequency (how long it takes in seconds for a left + right steps)
   # (in Hz, > 0)
-  freq: 2.00
+  freq: 1.6
   # Length of double support phase in half cycle (how long both legs should be on the ground, as a ratio of how long it takes for a single step)
   # (ratio, [0:1])
-  double_support_ratio: 0.7
+  double_support_ratio: 0.45
   # Give extra swing to first step for better start
   # (in ?, [0:10])
   first_step_swing_factor: 1.0 #1.0
@@ -50,13 +50,13 @@ walk:
     pitch: 0.45 #0.3960581214540991 #28
     # Phase offset of trunk oscillation
     # (half cycle phase, [-1:1])
-    phase: -0.10781713685949587
+    phase: -0.20781713685949587
     # Trunk forward offset (how much we offset the trunk forward or backward lean when walking)
     # (in m)
     x_offset: 0.05 #0.022805009368515608 # 0.045
     # Trunk lateral offset (how much we offset the trunk left or right lean when walking)
     # (in m)
-    y_offset: 0.0066027606288281675
+    y_offset: 0 # 0.0066027606288281675
     # Trunk lateral oscillation amplitude ratio (how much we swing the trunk left and right when stepping)
     # (ratio, >= 0)
     swing: 0.03066984644163803 #0.05
@@ -73,10 +73,10 @@ walk:
     pitch_p_coef:
       # Trunk pitch orientation proportional to forward step
       # (in rad/m)
-      forward: -1.098538426705446
+      forward: 0 #-1.098538426705446
       # Trunk pitch orientation proportional to rotation step
       # (in 1)
-      turn: 0.23005408256772517 #18
+      turn: 0 #0.23005408256772517 #18
   kick:
     # Length of kick movement
     # (in m, [0:1])
@@ -95,7 +95,7 @@ walk:
 max_step:
   # Maximal step length in X
   # (in m, [0:1])
-  x: 0.1
+  x: 0.2
   # Maximal step length in Y
   # (in m, [0:1])
   y: 0.1
