--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ set(CI_BUILD
       "This disables the effects of the CI_BUILD variable. We should remove this set() once warnings have been fixed."
 )
 
-# Default to do a debug build
+# Default to do a release build
 if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
   message(STATUS "Setting build type to 'Release' as none was specified.")
   set(CMAKE_BUILD_TYPE
